log

Thu 14 Mar 2024 02:55:04 PM UTC: 
 exercises.c | 71 +++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 64 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:97:5: error: expected expression before ‘}’ token
   97 |     }
      |     ^
Compilation failed
f7aa6b9
Thu 14 Mar 2024 02:56:07 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   19 |   return max; }
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
ecb06cf
Thu 14 Mar 2024 02:56:54 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   19 |   return max; }
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
28ec53e
Thu 14 Mar 2024 02:59:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
2ec76f5
Thu 14 Mar 2024 03:00:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
24dc17b
Thu 14 Mar 2024 03:02:21 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
4d38ca2
